New design layout Class Control - Phong Nguyen

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -48,7 +48,10 @@
           <a href="#">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#/studentlist">QL Học Sinh <span class="menu-icon fa fa-table"></span></a>
+          <a href="#/studentlist">Học Sinh <span class="menu-icon fa fa-table"></span></a>
+        </li>
+        <li class="sidebar-list">
+          <a href="#/classcontrol">Lớp Học<span class="menu-icon fa fa-table"></span></a>
         </li>
       </ul>
       <div class="sidebar-footer">
