New layout school year - Phong Nguyen

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -59,6 +59,9 @@
         <li class="sidebar-list">
           <a href="#/rule">Quy định<span class="menu-icon fa fa-table"></span></a>
         </li>
+        <li class="sidebar-list">
+          <a href="#/schoolyear">Tạo năm học<span class="menu-icon fa fa-table"></span></a>
+        </li>
       </ul>
       <div class="sidebar-footer">
         <div class="col-xs-4">
