Implement handle Student: List - Create - Edit - View

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,6 +17,7 @@
   <!-- endbuild -->
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
+  <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="components/angular/angular.min.js"></script>
   <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
@@ -166,6 +167,6 @@
     <!-- End Content Wrapper -->
   </div>
   <!-- End Page Wrapper -->
+  <div id="modal_area"></div>
 </body>
-
 </html>
