New layout page design

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,7 +60,7 @@
           <a href="#/schoolyear">Tạo năm học<span class="menu-icon fa fa-plus-circle"></span></a>
         </li>
       </ul>
-      <div class="sidebar-footer">
+      <!--<div class="sidebar-footer">
         <div class="col-xs-4">
           <a href="#" target="_blank">
             DEMO
@@ -76,7 +76,7 @@
             DEMO
           </a>
         </div>
-      </div>
+      </div>-->
     </div>
     <!-- End Sidebar -->
 
@@ -86,7 +86,7 @@
         <!-- Header Bar -->
         <div class="row header">
           <div class="col-xs-12">
-            <div class="user pull-right">
+            <!--<div class="user pull-right">
               <div class="item dropdown" uib-dropdown>
                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle>
                   <img src="img/avatar.jpg">
@@ -119,7 +119,7 @@
                   </li>
                 </ul>
               </div>
-              <!--<div class="item dropdown" uib-dropdown>
+              <div class="item dropdown" uib-dropdown>
                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle>
                   <i class="fa fa-bell-o"></i>
                 </a>
@@ -132,8 +132,8 @@
                     <a href="#">Server Down!</a>
                   </li>
                 </ul>
-              </div>-->
-            </div>
+              </div>
+            </div>-->
             <div class="meta">
               <div class="page">
                 <label style="width:85px; margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4">Năm học</label>
