--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="shortcut icon" href="img/favicon.ico">
   <title>Quản lý học sinh</title>
   <!-- STYLES -->
   <!-- build:css lib/css/main.min.css -->
@@ -12,8 +12,11 @@
   <link rel="stylesheet" type="text/css" href="components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="components/rdash-ui/dist/css/rdash.min.css">
   <link rel="stylesheet" type="text/css" href="components/rdash-ui/dist/css/rdash.min.css">
-  <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">  
+  <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
+  <link rel="stylesheet" type="text/css" href="components/jquery-ui/themes/smoothness/jquery-ui.min.css">  
+  <link rel="stylesheet" type="text/css" href="components/jquery-ui/themes/smoothness/theme.css">  
   <link rel="stylesheet" type="text/css" href="style/appstyle.css">
+
   <!-- endbuild -->
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
@@ -23,6 +26,7 @@
   <script type="text/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-grid/ui-grid.min.js"></script>
+  <script type="text/javascript" src="components/jquery-ui/jquery-ui.min.js"></script>  
 
   <!-- endbuild -->
   <!-- Custom Scripts -->
@@ -136,12 +140,12 @@
             </div>-->
             <div class="meta">
               <div class="page">
-                <label style="width:85px; margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4">Năm học</label>
+                <label style="width:85px; margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4">Năm học: </label>
                 <div style="min-width: 100px;" class="col-sm-4 col-md-2 col-lg-1">
-                  <select ng-change="changeSchoolYear()" class="form-control input-sm" ng-model="selectedSchoolYear" name="year">
-                      <option ng-selected="selectedSchoolYear==data.schooYearID" ng-repeat="data in schoolYear" value="{{data.schooYearID}}">{{data.schoolYearName}}</option>                                           
+                  <select class="form-control input-sm" ng-model="selectedSchoolYear">
+                      <option ng-repeat="data in schoolYear" value="{{data}}" ng-selected="selectedSchoolYear.schoolYearID == data.schoolYearID">{{data.schoolYearName}}</option>
                   </select>
-                </div>
+                  </div>
               </div>
               <div class="breadcrumb-links">
                 
