--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,8 +26,9 @@
   <script type="text/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-grid/ui-grid.min.js"></script>
-  <script type="text/javascript" src="components/jquery-ui/jquery-ui.min.js"></script>  
-
+  <script type="text/javascript" src="components/jquery-ui/jquery-ui.min.js"></script> 
+  <script type="text/javascript" src="components/jquery-ui/ui/i18n/datepicker-vi.js"></script> 
+   
   <!-- endbuild -->
   <!-- Custom Scripts -->
   <script type="text/javascript" src="js/dashboard.min.js"></script>
@@ -141,7 +142,7 @@
             <div class="meta">
               <div class="page">
                 <label style="width:85px; margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">Năm học: </label>
-                <div class="col-xs-6 col-sm-4 col-md-2 col-lg-1">
+                <div class="col-xs-6 col-sm-4 col-md-2 col-lg-1" style="min-width: 100px;">
                   <select class="form-control input-sm" ng-model="selectedSchoolYear" style="max-width: 100px;">
                       <option ng-repeat="data in masterSchoolYear" value="{{data}}" ng-selected="selectedSchoolYear.schoolYearID == data.schoolYearID">{{data.schoolYearName}}</option>
                   </select>
