--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,20 +15,24 @@
   <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
   <link rel="stylesheet" type="text/css" href="components/jquery-ui/themes/smoothness/jquery-ui.min.css">  
   <link rel="stylesheet" type="text/css" href="components/jquery-ui/themes/smoothness/theme.css">  
+  <link rel="stylesheet" type="text/css" href="components/angularjs-slider/dist/rzslider.min.css"/>
   <link rel="stylesheet" type="text/css" href="style/appstyle.css">
 
   <!-- endbuild -->
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
   <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="components/jquery-ui/jquery-ui.min.js"></script> 
+  <script type="text/javascript" src="components/jquery-ui/ui/i18n/datepicker-vi.js"></script> 
   <script type="text/javascript" src="components/angular/angular.min.js"></script>
   <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-grid/ui-grid.min.js"></script>
-  <script type="text/javascript" src="components/jquery-ui/jquery-ui.min.js"></script> 
-  <script type="text/javascript" src="components/jquery-ui/ui/i18n/datepicker-vi.js"></script> 
-   
+  <script type="text/javascript" src="components/angularjs-slider/dist/rzslider.min.js"></script> 
+  <!--<script type="text/javascript" src="components/angular-touch/angular-touch.min.js"></script> 
+  <script type="text/javascript" src="components/angular-animate/angular-animate.min.js"></script> -->
+    
   <!-- endbuild -->
   <!-- Custom Scripts -->
   <script type="text/javascript" src="js/dashboard.min.js"></script>
@@ -62,7 +66,7 @@
           <a href="#/rule">Quy định<span class="menu-icon fa fa-cogs"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#/schoolyear">Tạo năm học<span class="menu-icon fa fa-plus-circle"></span></a>
+          <a href="#/schoolyear">Năm học<span class="menu-icon fa fa-graduation-cap"></span></a>
         </li>
       </ul>
       <!--<div class="sidebar-footer">
@@ -141,15 +145,14 @@
             </div>-->
             <div class="meta">
               <div class="page">
-                <label style="width:85px; margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">Năm học: </label>
-                <div class="col-xs-6 col-sm-4 col-md-2 col-lg-1" style="min-width: 100px;">
+                <label style="margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">Năm học: {{masterSelectedschoolYear.schoolYearName}}</label>
+                <!--<div class="col-xs-6 col-sm-4 col-md-2 col-lg-1" style="min-width: 100px;">
                   <select class="form-control input-sm" ng-model="selectedSchoolYear" style="max-width: 100px;">
                       <option ng-repeat="data in masterSchoolYear" value="{{data}}" ng-selected="selectedSchoolYear.schoolYearID == data.schoolYearID">{{data.schoolYearName}}</option>
                   </select>
-                  </div>
+                  </div>-->
               </div>
               <div class="breadcrumb-links">
-                
               </div>
             </div>
           </div>
