Improve Class & Regulation feature

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,7 +63,7 @@
           <a href="#/report">Báo cáo<span class="menu-icon fa fa-file-text-o"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#/rule">Quy định<span class="menu-icon fa fa-cogs"></span></a>
+          <a href="#/regulation">Quy định<span class="menu-icon fa fa-cogs"></span></a>
         </li>
         <li class="sidebar-list">
           <a href="#/schoolyear">Năm học<span class="menu-icon fa fa-graduation-cap"></span></a>
