Enter Score Feature

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -145,7 +145,7 @@
             </div>-->
             <div class="meta">
               <div class="page">
-                <label style="margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">Năm học: {{masterSelectedschoolYear.schoolYearName}}</label>
+                <label style="margin-top:2px;" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">Năm học: {{masterRegulation.schoolYearName}}</label>
                 <!--<div class="col-xs-6 col-sm-4 col-md-2 col-lg-1" style="min-width: 100px;">
                   <select class="form-control input-sm" ng-model="selectedSchoolYear" style="max-width: 100px;">
                       <option ng-repeat="data in masterSchoolYear" value="{{data}}" ng-selected="selectedSchoolYear.schoolYearID == data.schoolYearID">{{data.schoolYearName}}</option>
