--- a/src/client/index.html
+++ b/src/client/index.html
@@ -51,7 +51,7 @@
         </li>
         <!--<li class="sidebar-title"><span><NAVIGATION></span></li>-->
         <li class="sidebar-list">
-          <a href="#">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+          <a href="#">Thống kê <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li class="sidebar-list">
           <a href="#/studentlist">Học Sinh <span class="menu-icon fa fa-id-card"></span></a>
